# BobaCoin-blockchain-GPU

./: Cargo.toml  Makefile  README.md  build.rs
proto/: nodeMessage.proto
src/: blockchain_network.rs  lib.rs  main.rs  models.rs
src/models/: blockchain.rs  client.rs  cudalib.rs  network.rs  node.rs
tests/: test_fork.rs  test_invalid_block.rs  test_join_network.rs  test_longer_chain.rs  test_mine_block.rs  test_submit_transaction.rs  test_sync_blockchain.rs
tests/common/: mod.rs
