[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
prost = "0.12"
hex = "0.4.3"
sha256 = "1.5.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10" }

[build-dependencies]
tonic-build = "0.11"
